--- a/SecureDoc/posts/templates/posts/home.html
+++ b/SecureDoc/posts/templates/posts/home.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+    <!-- Base html contains the header (Nav bar) and the foot of the page, we extends this here to reuse it
+        This follows the DRY principle-->
     {% extends 'base.html' %}
 
     {% block content %}
@@ -23,6 +25,8 @@
                 <h3>Your Documents</h3>
                 <br/>
                 <table class="table table-hover">
+                <!-- Loop that will displays all the post objects that belong to the current user
+                     Number of iterations depends on the number of entries in the posts dictionary -->
                     {% for posts in posts.all %}
                         <tr>
                             <td>
@@ -40,6 +44,8 @@
                 <h3>Documents shared with you</h3>
                 <br/>
                 <table class="table table-hover">
+                <!-- Loop to display documents that have been shared with the user
+                     Number of iterations depends on the number of entries in the posts dictionary -->
                     {% for shared_posts in s_posts %}
                     <tr>
                         <td>
