--- a/SecureDoc/friends/templates/friends/view_friends.html
+++ b/SecureDoc/friends/templates/friends/view_friends.html
@@ -18,11 +18,13 @@
           <div class="col-md-4">
               <h3>Your friends</h3>
               <table class="table table-hover">
+                  <!-- Loop that will displays all friends of the user
+                       Number of iterations depends on the number of entries in the user dictionary -->
                   {% for user in users %}
                       <form method="post" action="{% url 'friends:delete_friend' %}" name="remove_friend">
                        {% csrf_token %}
                           <tr>
-                              <input type="hidden" name="rm_friend_id" value={{ user.first.id }} >
+                              <input type="hidden" name="rm_friend_id" value={{ user.first.id }} ><!--hidden value to post-->
                               <td>{{user.first.username}}</td>
                               <td class="text-right"><button type="submit" class="btn btn-danger">Delete</button></td>
                           </tr>
@@ -34,14 +36,17 @@
               <h3>Friend Requests</h3>
                   <table class="table table-hover">
                       {% for req in friend_req %}
+                          <!-- Loop that will displays all friend requests sent to the user -->
                           <tr>
                               <td>{{req.first.username}}</td>
+                              <!-- confirm friend -->
                               <form method="post" action="{% url 'friends:confirm_friend' %}" name="friend_request">
                                   {% csrf_token %}
                                   <input type="hidden" name="req_friend_id" value={{ req.first.id }} >
                                   <td class="text-right"><button type="submit" class="btn btn-success">Accept</button></td>
                               </form>
 
+                              <!-- deny friend  -->
                               <form method="post" action="{% url 'friends:deny_friend' %}" name="friend_request">
                                   {% csrf_token %}
                                   <input type="hidden" name="req_friend_id" value={{ req.first.id }} >
@@ -54,6 +59,7 @@
           </div>
           <div class="col-md-4">
               <h3>Add friends</h3>
+              <!-- Form to search for friend -->
               <form method="post" class="form-inline" name="add_friend" action="{% url 'friends:add_friend' %}" >
                    {% csrf_token %}
                   <div class="form-group">
@@ -63,6 +69,7 @@
                   <button type="submit" class="btn btn-default">Send Request</button>
                 </form>
                 <br>
+              <!-- Error displayed here, ie the entered user doesnt exist -->
               {%if error %}
                   <div class="alert alert-danger" role="alert">
                       {{ error }}
