--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -16,6 +16,7 @@
             <div class="text-center col-md-4 col-md-offset-4">
                 <h1>Login!</h1>
 
+                <!-- Display errors when logging in here -->
                 {%if error %}
                     <div class="alert alert-danger" role="alert">
                     {{ error }}
@@ -26,7 +27,8 @@
                     {% csrf_token %}
 
                     {% if request.GET.next %}
-                    <input type="hidden" name="next" value={{ request.GET.next }} >
+                        <!-- If the user was redirect here from somewhere else, store the original destination here-->
+                        <input type="hidden" name="next" value={{ request.GET.next }} >
                     {% endif %}
 
                     <br />
