--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -58,6 +58,7 @@
                 {% csrf_token %}
 
                 <input type="hidden" name="html2doc" id="html2doc"> <!-- Hidden info to post over -->
+                <input type="hidden" name="doc2pdf" id="doc2pdf"> <!-- Hidden info to post over -->
                 <input type="hidden" name="post_title" value={{post.title}} >
                 <button class="btn btn-primary" type="submit" value="doc" id="todoc">
                     <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Export to docx
