--- a/SecureDoc/accounts/templates/accounts/profile.html
+++ b/SecureDoc/accounts/templates/accounts/profile.html
@@ -10,11 +10,11 @@
     {% block content %}
 
         <div class="container text-center">
-            <img src="/static/img/me2.jpeg" alt="Profile img" class="img-circle" width="140" height="140">
+            <img src="/static/img/qm.jpeg" alt="Profile img" class="img-circle" width="140" height="140">
             <br/>
-            <h3>{{user}} - {{user.id}}</h3>
             <h3>{{user.first_name}} {{user.last_name}}</h3>
-            <h3>{{user.email}}</h3>
+            <h3>Username: {{user}}</h3>
+            <h3>Email: {{user.email}}</h3>
         </div>
 
     {% endblock %}
